Hooked up to MySQL Db

--- a/ChordProgressionGenerator/ChordProgressionGenerator/appsettings.json
+++ b/ChordProgressionGenerator/ChordProgressionGenerator/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db"
+    "DefaultConnection": "server=localhost;userid=chord_progression_generator;password=1234;database=chord_progression_generator;"
   },
   "Logging": {
     "LogLevel": {
